Fix: SessionService.toList() shuffle crash
Changed .toList() to .collect(Collectors.toList()) since .toList()
returns an unmodifiable List that causes
UnsupportedOperationException when Collections.shuffle() is called.

This was a critical bug that crashed every new session creation.